# PathView

./: .gitignore  Dockerfile  MANIFEST.in  README.md  convert_to_pathsim.py  convert_to_python.py  glc.py  mwe.py  package-lock.json  package.json  paper.bib  paper.md  pyproject.toml  requirements-dev.txt  requirements.txt  vite.config.js
docs/: conf.py  index.rst  installation.rst  support.rst  usage.rst
example_graphs/: arc_cycle.json  baby.json  demo_pid_fixed.json  events.json  events_advanced.json  festim_two_walls.json  harmonic_oscillator.json  isotopic_exchange.json  linear_feedback.json  pid.json  spectrum.json  stick_slip.json
fuel_cycle_sim/: __init__.py
saved_graphs/: arc_cycle.json  baby.json  default cycle.json  demo_pid.json  example_scope.json  example_source.json  festim_example.json  function_demo.json  linear_feedback.json  sample 1.json  test.json  test3.json
src/: AdderNode.jsx  AmplifierNode.jsx  App.css  App.jsx  BubblerNode.jsx  ConstantNode.jsx  ContextMenu.jsx  CustomEdge.jsx  CustomHandle.jsx  CustomNode.jsx  DelayNode.jsx  EventsTab.jsx  FunctionNode.jsx  GlobalVariablesTab.jsx  IntegratorNode.jsx  NodeSidebar.jsx  ProcessNode.jsx  PythonCodeEditor.css  PythonCodeEditor.jsx  ScopeNode.jsx  Sidebar.jsx  SourceNode.jsx  Splitters.jsx  StepSourceNode.jsx  VialNode.jsx  __init__.py  backend.py  block_mapping.py  convert_to_python.py  custom_pathsim_blocks.py  nodeConfig.js  pathsim_utils.py
templates/: template.py
test/: test_backend.py  test_convert_python.py  test_custom_blocks.py  test_events.py  test_examples.py  test_templates.py
(+66 files in other folders)
